@@ -1,15 +1,12 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE beans PUBLIC "-//SPRING//DTD BEAN//EN" "http://www.springframework.org/dtd/spring-beans.dtd">
+<?xml version="1.0" encoding="UTF-8"?><!DOCTYPE beans PUBLIC "-//SPRING//DTD BEAN//EN" "http://www.springframework.org/dtd/spring-beans.dtd">
 
 <beans>
     <description>
-        This application context contains the Spring-WS beans.
-    </description>
+        This application context contains the Spring-WS beans.</description>
 
     <bean id="messageDispatcher" class="org.springframework.ws.soap.SoapMessageDispatcher">
         <description>
-            The MessageDispatcher is responsible for routing messages to endpoints.
-        </description>
+            The MessageDispatcher is responsible for routing messages to endpoints.</description>
         <property name="endpointMappings">
             <list>
                 <ref local="payloadMapping"/>
@@ -30,8 +27,7 @@
             This endpoint mapping uses the qualified name of the payload (body contents) to determine the endpoint for
             an incoming message. The name GetFlightsRequest with namespace
             http://www.springframework.org/spring-ws/samples/airline/schemas is mapped to the getFlightsEndpoint.
-            Additionally, messages are logged using the logging interceptor.
-        </description>
+            Additionally, messages are logged using the logging interceptor.</description>
         <property name="mappings">
             <props>
                 <prop key="{http://www.springframework.org/spring-ws/samples/airline/schemas}GetFlightsRequest">
@@ -47,8 +43,7 @@
         <description>
             This endpoint mapping uses SOAP Actions to determine the endpoint for an incoming message. The key
             http://www.springframework.org/spring-ws/samples/airline/BookFlight is mapped to the bookFlightEndpoint.
-            Additionally, message are logged and validated.
-        </description>
+            Additionally, message are logged and validated.</description>
         <property name="mappings">
             <props>
                 <prop key="http://www.springframework.org/spring-ws/samples/airline/BookFlight">
@@ -63,33 +58,29 @@
         </property>
     </bean>
 
-    <bean id="validatingInterceptor" class="org.springframework.ws.endpoint.PayloadValidatingInterceptor">
+    <bean id="validatingInterceptor" class="org.springframework.ws.endpoint.interceptor.PayloadValidatingInterceptor">
         <description>
             This interceptor validates both incoming and outgoing message contents according to the 'airline.xsd' XML
-            Schema file.
-        </description>
+            Schema file.</description>
         <property name="schema" value="airline.xsd"/>
         <property name="validateRequest" value="true"/>
         <property name="validateResponse" value="true"/>
     </bean>
 
-    <bean id="loggingInterceptor" class="org.springframework.ws.endpoint.PayloadLoggingInterceptor">
+    <bean id="loggingInterceptor" class="org.springframework.ws.endpoint.interceptor.PayloadLoggingInterceptor">
         <description>
-            This interceptor logs the message payload.
-        </description>
+            This interceptor logs the message payload.</description>
     </bean>
 
     <bean id="bookFlightEndpoint" class="org.springframework.ws.samples.airline.ws.BookFlightEndpoint">
         <description>
-            This endpoint handles book flight request.
-        </description>
+            This endpoint handles book flight request.</description>
         <property name="airlineService" ref="airlineService"/>
     </bean>
 
     <bean id="getFlightsEndpoint" class="org.springframework.ws.samples.airline.ws.GetFlightsEndpoint">
         <description>
-            This endpoint handles get flights request.
-        </description>
+            This endpoint handles get flights request.</description>
         <property name="airlineService" ref="airlineService"/>
         <property name="marshaller" ref="jaxbMarshaller"/>
         <property name="unmarshaller" ref="jaxbMarshaller"/>
@@ -98,8 +89,7 @@
     <bean id="jaxbMarshaller" class="org.springframework.oxm.jaxb.Jaxb1Marshaller">
         <description>
             The validating JAXB Marshaller is used by the getFlightsEndpoint to unmarshal XML to objects and
-            vice-versa.
-        </description>
+            vice-versa.</description>
         <property name="contextPath" value="org.springframework.ws.samples.airline.schema"/>
         <property name="validating" value="true"/>
     </bean>
@@ -109,21 +99,18 @@
             This exception resolver maps exceptions to SOAP Faults. The business logic exceptions
             NoSeatAvailableException and NoSuchFlightException are mapped to custom SOAP Fault. Both
             UnmarshallingException andValidationFailureException are mapped to a SOAP Fault with a "Sender" fault code.
-            All other exceptions are mapped to a "Receiver" error code, the default.
-        </description>
+            All other exceptions are mapped to a "Receiver" error code, the default.</description>
         <property name="defaultFault">
             <value>RECEIVER,Server error</value>
         </property>
         <property name="exceptionMappings">
             <props>
                 <prop key="org.springframework.ws.samples.airline.service.NoSeatAvailableException">
-                    {http://www.springframework.org/spring-ws/samples/airline}airline:NoMoreSeats,
-                    No more seats available
-                </prop>
+                    {http://www.springframework.org/spring-ws/samples/airline}airline:NoMoreSeats, No more seats
+                    available</prop>
                 <prop key="org.springframework.ws.samples.airline.service.NoSuchFlightException">
-                    {http://www.springframework.org/spring-ws/samples/airline}airline:NoSuchFlight,
-                    No such flight exists
-                </prop>
+                    {http://www.springframework.org/spring-ws/samples/airline}airline:NoSuchFlight, No such flight
+                    exists</prop>
                 <prop key="org.springframework.oxm.UnmarshallingFailureException">SENDER,Invalid request</prop>
                 <prop key="org.springframework.oxm.ValidationFailureException">SENDER,Invalid request</prop>
             </props>
